--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
     tools:context="com.example.yejinlei.my_app_portfolio.MainActivity"
     android:clickable="true">
 
-    <android.support.design.widget.AppBarLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -20,16 +20,99 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    </android.support.design.widget.AppBarLayout>
+    </LinearLayout>
 
-    <include layout="@layout/content_main" />
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:layout_gravity="center_horizontal" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:orientation="vertical">
 
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="58dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="My App Portfolio"
+            android:id="@+id/textView2"
+            android:textColor="@color/background_floating_material_light"
+            android:singleLine="false"
+            android:autoText="false"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="67dp"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textAppearance="?android:attr/textAppearanceLarge"
+    android:text="My Nanodegree Apps!"
+    android:id="@+id/textView"
+    android:layout_above="@+id/button"
+    android:layout_alignStart="@+id/button"
+    android:autoText="false"
+    android:textAlignment="center" />
+
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="POPULAR MOVIES"
+    android:id="@+id/button"
+    android:layout_above="@+id/button2"
+    android:layout_alignStart="@+id/button2"
+    android:onClick="myClickbutton" />
+
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="STOCK HAWK"
+    android:id="@+id/button2"
+    android:layout_above="@+id/button3"
+    android:layout_centerHorizontal="true"
+    android:onClick="myClickbutton2" />
+
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="BUILD IT BIGGER"
+    android:id="@+id/button3"
+    android:layout_above="@+id/button4"
+    android:layout_centerHorizontal="true"
+    android:onClick="myClickbutton3" />
+
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="MAKE YOUR APP MATERIAL"
+    android:id="@+id/button4"
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+    android:onClick="myClickbutton4" />
+
+    <Button
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="GO UBIQUITOUS"
+    android:id="@+id/button5"
+    android:layout_below="@+id/button4"
+    android:layout_alignStart="@+id/button4"
+    android:onClick="myClickbutton5" />
+
+        <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="CAPSTONE"
+        android:id="@+id/button6"
+        android:layout_alignStart="@+id/button5"
+        android:layout_below="@+id/button5"
+        android:onClick="myClickbutton6" />
+
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
